...
        android:layout_height="wrap_content"
        android:text="@string/texto_elegir_opcion"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/LinearLayout_botones_recoger_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView_elegir_opcion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_gallery"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <android.support.design.widget.FloatingActionButton
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@android:drawable/ic_menu_save" />
        <!--android:visibility="gone"-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_clasificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@android:drawable/ic_menu_search" />
    </LinearLayout>

...
