...
        android:gravity="end"
        android:text="@string/boton_ir_claves"
        android:textAlignment="textEnd"
        android:textColor="@color/black" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/boton_clasificar_lanzadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_clasificar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
...
