...
    <string name="boton_ir_clasificar">Clasificar</string>
    <string name="boton_ir_setas">Mostrar Setas</string>
    <string name="boton_ir_claves">Ir claves</string>

    <!--1-Cadenas de los elementos de la actividad recoger foto-->

    <string name="texto_elegir_opcion">Seleccione una opción:</string>
    <string name="texto_mostrar_imagen">Imagen tomada para clasificar:</string>

    <!--2-Cadenas de los elementos de la actividad mostrar claves -->
    <string name="titulo_mostrar_claves">Mostrar claves</string>
    <string name="texto_informativo_mostrar_claves">Seleccione una tarjeta para mostrar la clave dicotómica de ese género:</string>

...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ayuda</string>

    <!--0-Cadenas de los elementos de la ayuda de lanzadora-->
    <string name="ayuda_lanzadora_0">Ayuda de la actividad principal:</string>
    <string name="ayuda_lanzadora_1">Para clasificar una foto pulse sobre el icono de la lupa.</string>
    <string name="ayuda_lanzadora_2">Para mostrar un listado de las setas disponibles pulse el icono de información.</string>
    <string name="ayuda_lanzadora_3">Para mostrar un listado de las claves dicotómicas disponibles pulse el siguiente botón.</string>
    <string name="ayuda_lanzadora_4">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--1-Cadenas de los elementos de la ayuda de recoger foto-->
    <string name="ayuda_recoger_0">Ayuda de la actividad recoger foto:</string>
    <string name="ayuda_recoger_1">Para cargar una foto desde la galería pulse el siguiente botón.</string>
...
