<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item android:title="@string/titulo_menu_1"
        android:id="@+id/menu_herramientas">
        <menu>
            <item
                android:id="@+id/menu_home"
                android:icon="@drawable/home"
                android:title="@string/home" />
            <item
                android:id="@+id/menu_clasificar"
                android:icon="@drawable/clasificar_menu"
                android:title="@string/clasificar" />
            <item
                android:id="@+id/menu_ir_claves"
                android:icon="@drawable/ir_claves"
                android:title="@string/claves" />
            <item
                android:id="@+id/menu_informacion"
                android:icon="@drawable/informacion"
                android:title="@string/informacion" />
        </menu>
    </item>

    <item android:title="@string/titulo_menu_2">
        <menu>
            <item
                android:id="@+id/menu_idioma"
                android:icon="@drawable/idioma"
                android:title="@string/idioma" />
            <item
                android:id="@+id/menu_ayuda"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/ayuda_menu" />
        </menu>
    </item>

</menu>
